--- a/petshop/templates/editpet.html
+++ b/petshop/templates/editpet.html
@@ -25,7 +25,10 @@
   <div class="mb-3">
     <div class="form-check">
       {# TODO  Add sold checkbox here #}
-      <label class="form-check-label" for="sold" > Sold </label>
+      <label class="form-check-label" for="sold" > Sold </label><br/>
+      <textarea rows="10" id="solid" class="form-control" name="solid">
+        {{sold}}
+        </textarea>
     </div>
   </div>
 
