--- a/petshop/templates/editpet.html
+++ b/petshop/templates/editpet.html
@@ -25,7 +25,7 @@
   <div class="mb-3">
     <div class="form-check">
       {# TODO  Add sold checkbox here #}
-      <label class="form-check-label" for="sold" > Sold </label><br/>
+      <label class="form-check-label" for="sold" > Sold </label>
       <textarea rows="10" id="solid" class="form-control" name="solid">
         {{sold}}
         </textarea>
